# Engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  build_new.sh  cmake_android.sh  cmake_apple.sh  cmake_emscripten.sh  lbullet.xml  lnjli.xml  lnjli.xml.REMOVED.git-id  swig_lua.sh
cmake.in/Platform.in/ios/: Info.plist
projects/: build_new.sh  cmake_apple.sh
projects/emscripten_Sublime/: CMakeCache.txt  Makefile  NJLIGameEngine.sublime-project  cmake_install.cmake  lbullet.xml  lnjli.xml
projects/ios_Xcode/: CMakeCache.txt  install_manifest.txt  lbullet.xml  lnjli.xml
projects/ios_Xcode/NJLIGameEngine.build/Release-iphoneos/ALL_BUILD.build/: dgph
projects/ios_Xcode/NJLIGameEngine.build/Release-iphoneos/EngineLibrary.build/: NJLIGameEngine.app.xcent  dgph
projects/ios_Xcode/NJLIGameEngine.build/Release-iphoneos/EngineSource.build/: NJLIGameEngine.app.xcent
projects/ios_Xcode/NJLIGameEngine.build/Release-iphoneos/SWIGLua.build/: Script-B3EF6E0CB78042D58DC8C33A.sh  dgph
projects/ios_Xcode/NJLIGameEngine.build/Release-iphoneos/ZERO_CHECK.build/: dgph
projects/ios_Xcode/NJLIGameEngine.build/Release-iphoneos/install.build/: Script-F4A8A1FC84CF43FFB56352F6.sh  dgph
projects/ios_Xcode/NJLIGameEngine.build/Release-iphoneos/ldoc.build/: dgph
projects/ios_Xcode/NJLIGameEngine.xcodeproj/: project.pbxproj
projects/ios_Xcode/Release-iphoneos/NJLIGameEngine.app/: Info.plist  NJLIGameEngine  embedded.mobileprovision  index.html
projects/ios_Xcode/Release-iphoneos/NJLIGameEngine.app/_CodeSignature/: CodeResources
projects/lib/: CMakeLists.txt
projects/macOS_Xcode/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt  lbullet.xml  lnjli.xml
projects/macOS_Xcode/CMakeScripts/: ReRunCMake.make  SWIGLua_cmakeRulesBuildPhase.makeRelWithDebInfo  doxygen_cmakeRulesBuildPhase.makeMinSizeRel  ldoc_cmakeRulesBuildPhase.makeRelease
projects/macOS_Xcode/NJLIGameEngine.build/Release/ALL_BUILD.build/: Script-55E8BCCF761F4487A625FCF1.sh  dgph
projects/macOS_Xcode/NJLIGameEngine.build/Release/EngineLibrary.build/: dgph
projects/macOS_Xcode/NJLIGameEngine.build/Release/SWIGLua.build/: Script-FA4F08D965AE441FB4CF9AB6.sh  dgph
projects/macOS_Xcode/NJLIGameEngine.build/Release/ZERO_CHECK.build/: Script-933A0FA8BCB74B7DB4E4A276.sh  dgph
projects/macOS_Xcode/NJLIGameEngine.build/Release/doxygen.build/: Script-994B1E5C21C940DD887E1966.sh
projects/macOS_Xcode/NJLIGameEngine.build/Release/install.build/: Script-39E47A83180843D786964C51.sh  dgph
projects/macOS_Xcode/NJLIGameEngine.build/Release/ldoc.build/: Script-1CCA73AF1F6C451E868CE572.sh  dgph
projects/macOS_Xcode/NJLIGameEngine.build/Release/libnjli_lua_module.build/: dgph~
projects/macOS_Xcode/NJLIGameEngine.build/Release/libnjli_shared.build/: Script-B2B151CA7AB645879CC587AC.sh
projects/macOS_Xcode/NJLIGameEngine.xcodeproj/: project.pbxproj
projects/source/: CMakeLists.txt  cmake_apple.sh
projects/source/SDL_Android/: local.properties
projects/source/SDL_Android/app/src/main/: AndroidManifest.xml
projects/source/SDL_Android/app/src/main/res/values/: strings.xml
projects/source/SDL_Android/gradle/wrapper/: gradle-wrapper.properties
projects/source/iOS/iOS/: AppDelegate.m  GameViewController.h  GameViewController.m
projects/source/iOS/iOS.xcodeproj/: project.pbxproj
projects/source/iOS/iOS.xcodeproj/project.xcworkspace/xcuserdata/jamesfolk.xcuserdatad/: UserInterfaceState.xcuserstate
projects/source/iOS/iOS/Shaders/: Shader.fsh  Shader.vsh
projects/source/iOS/iOSUITests/: iOSUITests.m
projects/static_libs/_android/mobile/: build.gradle  proguard-rules.pro
projects/static_libs/_android/tv/: build.gradle
projects/static_libs/androidVR/: local.properties
projects/static_libs/iOS/iOS/: AppDelegate.h  GameViewController.m  main.mm
projects/static_libs/iOS/iOS.xcodeproj/: project.pbxproj
projects/static_libs/iOS/iOSTests/: iOSTests.m
projects/static_libs/macOS/macOS/: main.cpp
projects/static_libs/macOS/macOS.xcodeproj/: project.pbxproj
projects/static_libs/tvOS/tvOS/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  main.m
projects/static_libs/tvOS/tvOS.xcodeproj/: project.pbxproj
projects/static_libs/tvOS/tvOSTests/: tvOSTests.m
projects/static_libs/tvOS/tvOSUITests/: tvOSUITests.m
projects/tvos_Xcode/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt  lbullet.xml  lnjli.xml
projects/tvos_Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  SWIGLua_cmakeRulesBuildPhase.makeRelWithDebInfo  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  doxygen_cmakeRulesBuildPhase.makeRelWithDebInfo  ldoc_cmakeRulesBuildPhase.makeDebug  libnjli_shared_postBuildPhase.makeDebug  libnjli_shared_postBuildPhase.makeMinSizeRel  libnjli_shared_postBuildPhase.makeRelWithDebInfo  libnjli_shared_postBuildPhase.makeRelease
projects/tvos_Xcode/NJLIGameEngine.xcodeproj/: project.pbxproj
projects/tvos_Xcode/Release-appletvos/NJLIGameEngine.app/: Info.plist  NJLIGameEngine  embedded.mobileprovision
src/njli/: World.cpp  WorldClock.h  WorldLuaVirtualMachine.cpp  WorldResourceLoader.cpp  WorldSocket.cpp  hello.cpp  hello.h  hello_public.h
src/njli/graphics/: ParticleEmitter.cpp
src/njli/graphics/opengl_2.1/: AbstractFrameBufferObject.cpp  AbstractRender.cpp  Cube.cpp  Geometry.cpp  MaterialProperty.cpp  WorldHUD.cpp
src/njli/graphics/opengl_es_2.0/: Geometry.cpp  MaterialProperty.cpp  ShaderProgram.cpp  WorldHUD.cpp
src/njli/physics/: PhysicsWorld.cpp
src/njli/physics/shape/: PhysicsShapeMultiSphere.cpp
src/njli/platform/: Game.cpp  Game.h  Log.h  main.cpp  main.mm
src/njli/platform/android/: GLPlatform.h  Log.cpp
src/njli/platform/appletvos/: WorldInput.cpp  WorldInput.mm
src/njli/platform/emscripten/: GLPlatform.h  Log.cpp
src/njli/platform/macOS/: DeviceTouch.cpp  File.cpp  GLPlatform.h  Log.mm
src/njli/sound/: Sound.h  WorldSound.h
src/njli/sound/fmod/: Sound.cpp  WorldSound.cpp
src/njli/sound/openal/: WorldSound.cpp
src/swig.in/lua/: hello.swg
src/swig.in/lua/njli/: _LuaEntry.i
(+1114 files in other folders)
